# Flac_player

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/: Bit_reader.hpp  Decoders.hpp  Flac.hpp  Flac_constants.hpp  Flac_types.hpp  Utf8_decoder.hpp  Wav.hpp  decoders.hpp
src/: Flac.cpp  Wav.cpp  decoders.cpp  main.cpp
wav/: main.cpp
